deployments/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes,io/name: idp-ui
  name:  idp-ui
  namespace: idp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes,io/name: idp-ui
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes,io/name: idp-ui
    spec:
      containers:
      - name: idp-ui
        image: idp-frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        imagePullSecrets:
        - name: docker-secret-idp


---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes,io/name: epc-ui
  name:  epc-ui
  namespace: idp
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes,io/name: epc-ui
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes,io/name: epc-ui
    spec:
      containers:
      - name: epc-ui
        image: epc-frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        imagePullSecrets:
        - name: docker-secret-idp

---
apiVersion: v1
kind: Service
metadata:
   name: idp-ui-svc
   namespace: idp
spec:
  type: NodePort
  selector:
     app.kubernetes.io/name: idp-ui
  ports:
     port: 80
     targetPort: 80
     nodePort: 30001


---
---
apiVersion: v1
kind: Service
metadata:
   name: epc-ui-svc
   namespace: idp
spec:
  type: NodePort
  selector:
     app.kubernetes.io/name: epc-ui
  ports:
     port: 80
     targetPort: 80
     nodePort: 30002



---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idp-ingress
  namespace: idp
spec:
  ingressClassName: nginx
  rules:
    - host: cloudstones.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: idp-ui-svc
                port:
                  number: 80
          - path: /epc
            pathType: Prefix
            backend:
              service:
                name: epc-ui-svc
                port:
                  number: 80
